# AsterixEuroControl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appConfig.json  main.cpp
CATMessages/: AsterixCatMessageBase.cpp  AsterixCatMessageBase.h  AsterixMessages.h  CATMessageBase.cpp  CATMessageBase.h  CMakeLists.txt  Tools.h
CATMessages/021/: cat21.cpp  cat21.h
CATMessages/034/: CATMessageBase.h  cat034_1.26_mapping.json  cat034_1.26_mapping_values.json  cat34.cpp  cat34.h  cat34Messages.h
CATMessages/048/: cat48.cpp  cat48.h  cat48Message.h
CATMessages/062/: cat62.cpp  cat62.h
CATMessages/categories-definitions/: Full Json Samples CAT21-34-48-62.rar  MessageSamples.rar  cat048_1.23.json  cat062_1.16.json  sampleCat21.json  sampleCat34.json  sampleCat34_48_62.rar  sampleCat34_RadarDB.json  sampleCat48.json  sampleCat48_Measurement.json  sampleCat48_RadarTrack.json  sampleCat62.json
CATMessages/categories-types/: cat21Message.h  cat62Message.h
CATMessages/include/: AsterixCat21Messages.h  AsterixCat34Messages.h  AsterixCat48Messages.h  AsterixCat62Messages.h  cat21.h  cat48.h
CATMessages/items/: extendablebitsitemparser.h  extendableitemparser.cpp  fixedbitfielditemparser.cpp  fixedbitfielditemparser.h  fixedbitsitemparser.cpp  iteminfo.h  itemparser.cpp  itemparserbase.h  skipbytesitemparser.cpp  string_conv.h
CATMessages/src/: AsterixCat21Messages.cpp  AsterixCat34Messages.cpp  AsterixCat48Messages.cpp  AsterixCat62Messages.cpp  cat21.cpp  cat34.cpp  cat48.cpp  cat62.cpp
CATMessages/tools/include/: string_conv.h
CATMessages/tools/include/parser/: fixedbitfielditemparser.h  fixedbytesitemparser.h  itemparserbase.h
CATMessages/tools/include/serializer/: compounditemserializer.h  dynamicbytesitemserializer.h  extendablebitsitemserializer.h  extendableitemserializer.h  fixedbitfielditemserializer.h  fixedbitsitemserializer.h  fixedbytesitemserializer.h  itemserializer.h  itemserializerbase.h  optionalitemserializer.h  repetetiveitemserializer.h  skipbytesitemserializer.h
CATMessages/tools/src/: string_conv.cpp
CATMessages/tools/src/parser/: compounditemparser.cpp  dynamicbytesitemparser.cpp  extendablebitsitemparser.cpp  extendableitemparser.cpp  fixedbitfielditemparser.cpp  fixedbitsitemparser.cpp  fixedbytesitemparser.cpp  itemparser.cpp  itemparserbase.cpp  optionalitemparser.cpp  repetetiveitemparser.cpp  skipbytesitemparser.cpp
CATMessages/tools/src/serializer/: compounditemserializer.cpp  dynamicbytesitemserializer.cpp  extendablebitsitemserializer.cpp  extendableitemserializer.cpp  fixedbitfielditemserializer.cpp  fixedbitsitemserializer.cpp  fixedbytesitemserializer.cpp  itemserializer.cpp  itemserializerbase.cpp  optionalitemserializer.cpp  repetetiveitemserializer.cpp  skipbytesitemserializer.cpp
GTest/: CMakeLists.txt  main_test.cpp
GTest/Samples/: sampleCat34.json  sampleCat48.json  sampleCat62.json
GTest/Tests/: CAT34Test.h  CAT48Test.h  CAT62Test.h  ExampleTest.h
include/: AppConfig.h  RadarClientMessageHandler.h  Tools.h
src/: AppConfig.cpp  RadarClientMessageHandler.cpp  Tools.cpp  compounditemparser.cpp  compounditemparser.h  dynamicbytesitemparser.cpp  dynamicbytesitemparser.h  extendablebitsitemparser.cpp  extendablebitsitemparser.h  extendableitemparser.h  fixedbitfielditemparser.cpp  fixedbitfielditemparser.h  fixedbitsitemparser.cpp  fixedbitsitemparser.h  fixedbytesitemparser.cpp  fixedbytesitemparser.h  itemparser.h  itemparserbase.cpp  itemparserbase.h  optionalitemparser.cpp  optionalitemparser.h  repetetiveitemparser.cpp  repetetiveitemparser.h  skipbytesitemparser.h  string_conv.h
test/: test_cat034_1.26.cpp
